force-app/main/default/objects/Zuora_Data_Query__c/Zuora_Data_Query__c.object-meta.xml
<CustomObject>
    <label>Zuora Data Query</label>
    <nameField>
        
        <displayFormat>ZDQ-{00000000}</displayFormat>
        
        <label>Zuora Data Query Name</label>
        
        <type>AutoNumber</type>
        
    </nameField>
    <pluralLabel>Zuora Data Queries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>