force-app/main/default/objects/Zuora_Data_Query__c/fields/Data_From_Zuora__c.field-meta.xml
<CustomField>
    <fullName>Data_From_Zuora__c</fullName>
    <inlineHelpText>Link_To_File__c contains the actual data, this should really only be used for small data sets or as a preview</inlineHelpText>
    <label>Data From Zuora</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>