force-app/main/default/objects/Zuora_Data_Query__c/fields/Link_To_File__c.field-meta.xml
<CustomField>
    <fullName>Link_To_File__c</fullName>
    <label>Link To File</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>