force-app/main/default/objects/Zuora_Data_Query__c/fields/Number_of_Retries__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Retries__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Because we sometimes see system issues in Zuora (due to the volume of requests at certain times), we will retry the query this number of times, waiting between each try (set by custom setting)</inlineHelpText>
    <label>Number of Retries</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>