force-app/main/default/objects/Zuora_Data_Query__c/fields/Output_Rows__c.field-meta.xml
<CustomField>
    <fullName>Output_Rows__c</fullName>
    <label>Output Rows</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>