force-app/main/default/objects/Zuora_Data_Query__c/fields/Processing_Parameter__c.field-meta.xml
<CustomField>
    <fullName>Processing_Parameter__c</fullName>
    <inlineHelpText>JSON for ZuoraDataQueryService.ProcessingParameter that indicates what should be executed after this data query successfully runs</inlineHelpText>
    <label>Processing Parameter</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>