force-app/main/default/objects/Zuora_Data_Query__c/fields/Query__c.field-meta.xml
<CustomField>
    <fullName>Query__c</fullName>
    <inlineHelpText>Query that was submitted to Zuora</inlineHelpText>
    <label>Query</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>