force-app/main/default/objects/Zuora_Data_Query__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <inlineHelpText>Defined by Zuora API documents

https://www.zuora.com/developer/api-reference/#operation/GET_DataQueryJob</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetDefinition>
            
            
                <value>
                
                    <fullName>accepted</fullName>
                
                
                    <label>accepted</label>
                
                </value>
            
                <value>
                
                    <fullName>in_progress</fullName>
                
                
                    <label>in_progress</label>
                
                </value>
            
                <value>
                
                    <fullName>completed</fullName>
                
                
                    <label>completed</label>
                
                </value>
            
                <value>
                
                    <fullName>failed</fullName>
                
                
                    <label>failed</label>
                
                </value>
            
                <value>
                
                    <fullName>cancelled</fullName>
                
                
                    <label>cancelled</label>
                
                </value>
            
            </valueSetDefinition>
        
        </valueSet>
</CustomField>