force-app/main/default/objects/Zuora_Data_Query__c/fields/Zuora_Id__c.field-meta.xml
<CustomField>
    <fullName>Zuora_Id__c</fullName>
    <externalId>true</externalId>
    <label>Zuora Id</label>
    <length>200</length>
    <type>Text</type>
</CustomField>